graphmapreduce/src/gumbo/input/parser/antlr/GumboParser.java
package gumbo.input.parser.antlr;

// Generated from Gumbo.g4 by ANTLR 4.5
import java.util.List;

import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GumboParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, LOAD=3, REL=4, CSV=5, ARITY=6, AS=7, SET=8, DIR=9, OUTPUT=10, 
		SCRATCH=11, SELECT=12, FROM=13, SATISFYING=14, WHERE=15, IN=16, OR=17, 
		AND=18, NOT=19, INT=20, ID=21, PLACEHOLDER=22, FILENAME=23, QUOTE=24, 
		LPAR=25, RPAR=26, SEMICOLON=27, WS=28, SINGLE_LINE_COMMENT=29;
	public static final int
		RULE_script = 0, RULE_input = 1, RULE_format = 2, RULE_relname = 3, RULE_relarity = 4, 
		RULE_file = 5, RULE_schema = 6, RULE_selector = 7, RULE_loadschema = 8, 
		RULE_outputpath = 9, RULE_scratchpath = 10, RULE_select = 11, RULE_gfquery = 12, 
		RULE_satclause = 13, RULE_assrt = 14, RULE_expr = 15, RULE_guardedrel = 16, 
		RULE_anystring = 17, RULE_keyword = 18;
	public static final String[] ruleNames = {
		"script", "input", "format", "relname", "relarity", "file", "schema", 
		"selector", "loadschema", "outputpath", "scratchpath", "select", "gfquery", 
		"satclause", "assrt", "expr", "guardedrel", "anystring", "keyword"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "','", null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'('", "')'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "LOAD", "REL", "CSV", "ARITY", "AS", "SET", "DIR", "OUTPUT", 
		"SCRATCH", "SELECT", "FROM", "SATISFYING", "WHERE", "IN", "OR", "AND", 
		"NOT", "INT", "ID", "PLACEHOLDER", "FILENAME", "QUOTE", "LPAR", "RPAR", 
		"SEMICOLON", "WS", "SINGLE_LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gumbo.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GumboParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ScriptContext extends ParserRuleContext {
		public List<OutputpathContext> outputpath() {
			return getRuleContexts(OutputpathContext.class);
		}
		public OutputpathContext outputpath(int i) {
			return getRuleContext(OutputpathContext.class,i);
		}
		public List<ScratchpathContext> scratchpath() {
			return getRuleContexts(ScratchpathContext.class);
		}
		public ScratchpathContext scratchpath(int i) {
			return getRuleContext(ScratchpathContext.class,i);
		}
		public List<InputContext> input() {
			return getRuleContexts(InputContext.class);
		}
		public InputContext input(int i) {
			return getRuleContext(InputContext.class,i);
		}
		public List<SelectContext> select() {
			return getRuleContexts(SelectContext.class);
		}
		public SelectContext select(int i) {
			return getRuleContext(SelectContext.class,i);
		}
		public ScriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_script; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitScript(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptContext script() throws RecognitionException {
		ScriptContext _localctx = new ScriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SET || _la==ID) {
				{
				setState(42);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(38);
					outputpath();
					}
					break;
				case 2:
					{
					setState(39);
					scratchpath();
					}
					break;
				case 3:
					{
					setState(40);
					input();
					}
					break;
				case 4:
					{
					setState(41);
					select();
					}
					break;
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
	 
		public InputContext() { }
		public void copyFrom(InputContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InputArityContext extends InputContext {
		public RelnameContext relname() {
			return getRuleContext(RelnameContext.class,0);
		}
		public TerminalNode LOAD() { return getToken(GumboParser.LOAD, 0); }
		public FormatContext format() {
			return getRuleContext(FormatContext.class,0);
		}
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public TerminalNode ARITY() { return getToken(GumboParser.ARITY, 0); }
		public RelarityContext relarity() {
			return getRuleContext(RelarityContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GumboParser.SEMICOLON, 0); }
		public InputArityContext(InputContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitInputArity(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InputSchemaContext extends InputContext {
		public RelnameContext relname() {
			return getRuleContext(RelnameContext.class,0);
		}
		public TerminalNode LOAD() { return getToken(GumboParser.LOAD, 0); }
		public FormatContext format() {
			return getRuleContext(FormatContext.class,0);
		}
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public TerminalNode AS() { return getToken(GumboParser.AS, 0); }
		public LoadschemaContext loadschema() {
			return getRuleContext(LoadschemaContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GumboParser.SEMICOLON, 0); }
		public InputSchemaContext(InputContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitInputSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_input);
		try {
			setState(65);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new InputArityContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				relname();
				setState(48);
				match(T__0);
				setState(49);
				match(LOAD);
				setState(50);
				format();
				setState(51);
				file();
				setState(52);
				match(ARITY);
				setState(53);
				relarity();
				setState(54);
				match(SEMICOLON);
				}
				break;
			case 2:
				_localctx = new InputSchemaContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				relname();
				setState(57);
				match(T__0);
				setState(58);
				match(LOAD);
				setState(59);
				format();
				setState(60);
				file();
				setState(61);
				match(AS);
				setState(62);
				loadschema();
				setState(63);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormatContext extends ParserRuleContext {
		public TerminalNode REL() { return getToken(GumboParser.REL, 0); }
		public TerminalNode CSV() { return getToken(GumboParser.CSV, 0); }
		public FormatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_format; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitFormat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormatContext format() throws RecognitionException {
		FormatContext _localctx = new FormatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_format);
		int _la;
		try {
			setState(71);
			switch (_input.LA(1)) {
			case REL:
			case QUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				_la = _input.LA(1);
				if (_la==REL) {
					{
					setState(67);
					match(REL);
					}
				}

				}
				break;
			case CSV:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				match(CSV);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelnameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GumboParser.ID, 0); }
		public RelnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relname; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitRelname(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelnameContext relname() throws RecognitionException {
		RelnameContext _localctx = new RelnameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_relname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelarityContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GumboParser.INT, 0); }
		public RelarityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relarity; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitRelarity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelarityContext relarity() throws RecognitionException {
		RelarityContext _localctx = new RelarityContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_relarity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public List<TerminalNode> QUOTE() { return getTokens(GumboParser.QUOTE); }
		public TerminalNode QUOTE(int i) {
			return getToken(GumboParser.QUOTE, i);
		}
		public AnystringContext anystring() {
			return getRuleContext(AnystringContext.class,0);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(QUOTE);
			setState(78);
			anystring();
			setState(79);
			match(QUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchemaContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(GumboParser.LPAR, 0); }
		public List<SelectorContext> selector() {
			return getRuleContexts(SelectorContext.class);
		}
		public SelectorContext selector(int i) {
			return getRuleContext(SelectorContext.class,i);
		}
		public TerminalNode RPAR() { return getToken(GumboParser.RPAR, 0); }
		public SchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaContext schema() throws RecognitionException {
		SchemaContext _localctx = new SchemaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_schema);
		int _la;
		try {
			setState(100);
			switch (_input.LA(1)) {
			case LPAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				match(LPAR);
				setState(82);
				selector();
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(83);
					match(T__1);
					setState(84);
					selector();
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(90);
				match(RPAR);
				}
				break;
			case ID:
			case PLACEHOLDER:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				selector();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(93);
					match(T__1);
					setState(94);
					selector();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GumboParser.ID, 0); }
		public TerminalNode PLACEHOLDER() { return getToken(GumboParser.PLACEHOLDER, 0); }
		public SelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selector; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitSelector(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectorContext selector() throws RecognitionException {
		SelectorContext _localctx = new SelectorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_selector);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==PLACEHOLDER) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadschemaContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(GumboParser.LPAR, 0); }
		public List<TerminalNode> ID() { return getTokens(GumboParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GumboParser.ID, i);
		}
		public TerminalNode RPAR() { return getToken(GumboParser.RPAR, 0); }
		public LoadschemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loadschema; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitLoadschema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoadschemaContext loadschema() throws RecognitionException {
		LoadschemaContext _localctx = new LoadschemaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_loadschema);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(LPAR);
			setState(105);
			match(ID);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(106);
				match(T__1);
				setState(107);
				match(ID);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutputpathContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(GumboParser.SET, 0); }
		public TerminalNode OUTPUT() { return getToken(GumboParser.OUTPUT, 0); }
		public TerminalNode DIR() { return getToken(GumboParser.DIR, 0); }
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GumboParser.SEMICOLON, 0); }
		public OutputpathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outputpath; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitOutputpath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutputpathContext outputpath() throws RecognitionException {
		OutputpathContext _localctx = new OutputpathContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_outputpath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(SET);
			setState(116);
			match(OUTPUT);
			setState(117);
			match(DIR);
			setState(118);
			file();
			setState(119);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScratchpathContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(GumboParser.SET, 0); }
		public TerminalNode SCRATCH() { return getToken(GumboParser.SCRATCH, 0); }
		public TerminalNode DIR() { return getToken(GumboParser.DIR, 0); }
		public FileContext file() {
			return getRuleContext(FileContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GumboParser.SEMICOLON, 0); }
		public ScratchpathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scratchpath; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitScratchpath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScratchpathContext scratchpath() throws RecognitionException {
		ScratchpathContext _localctx = new ScratchpathContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_scratchpath);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(SET);
			setState(122);
			match(SCRATCH);
			setState(123);
			match(DIR);
			setState(124);
			file();
			setState(125);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectContext extends ParserRuleContext {
		public RelnameContext relname() {
			return getRuleContext(RelnameContext.class,0);
		}
		public GfqueryContext gfquery() {
			return getRuleContext(GfqueryContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GumboParser.SEMICOLON, 0); }
		public SelectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitSelect(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectContext select() throws RecognitionException {
		SelectContext _localctx = new SelectContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_select);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			relname();
			setState(128);
			match(T__0);
			setState(129);
			gfquery();
			setState(130);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GfqueryContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(GumboParser.SELECT, 0); }
		public SchemaContext schema() {
			return getRuleContext(SchemaContext.class,0);
		}
		public TerminalNode FROM() { return getToken(GumboParser.FROM, 0); }
		public RelnameContext relname() {
			return getRuleContext(RelnameContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(GumboParser.WHERE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SatclauseContext satclause() {
			return getRuleContext(SatclauseContext.class,0);
		}
		public GfqueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gfquery; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitGfquery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GfqueryContext gfquery() throws RecognitionException {
		GfqueryContext _localctx = new GfqueryContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_gfquery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(SELECT);
			setState(133);
			schema();
			setState(134);
			match(FROM);
			setState(135);
			relname();
			setState(137);
			_la = _input.LA(1);
			if (_la==SATISFYING) {
				{
				setState(136);
				satclause();
				}
			}

			setState(139);
			match(WHERE);
			setState(140);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SatclauseContext extends ParserRuleContext {
		public TerminalNode SATISFYING() { return getToken(GumboParser.SATISFYING, 0); }
		public List<AssrtContext> assrt() {
			return getRuleContexts(AssrtContext.class);
		}
		public AssrtContext assrt(int i) {
			return getRuleContext(AssrtContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(GumboParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(GumboParser.AND, i);
		}
		public SatclauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_satclause; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitSatclause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SatclauseContext satclause() throws RecognitionException {
		SatclauseContext _localctx = new SatclauseContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_satclause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(SATISFYING);
			setState(143);
			assrt();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(144);
				match(AND);
				setState(145);
				assrt();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssrtContext extends ParserRuleContext {
		public AssrtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assrt; }
	 
		public AssrtContext() { }
		public void copyFrom(AssrtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConstantAssertContext extends AssrtContext {
		public SelectorContext selector() {
			return getRuleContext(SelectorContext.class,0);
		}
		public List<TerminalNode> QUOTE() { return getTokens(GumboParser.QUOTE); }
		public TerminalNode QUOTE(int i) {
			return getToken(GumboParser.QUOTE, i);
		}
		public AnystringContext anystring() {
			return getRuleContext(AnystringContext.class,0);
		}
		public ConstantAssertContext(AssrtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitConstantAssert(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqualityAssertContext extends AssrtContext {
		public List<SelectorContext> selector() {
			return getRuleContexts(SelectorContext.class);
		}
		public SelectorContext selector(int i) {
			return getRuleContext(SelectorContext.class,i);
		}
		public EqualityAssertContext(AssrtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GumboVisitor ) return ((GumboVisitor<? extends T>)visitor).visitEqualityAssert(this);
			else return visitor.visitChildren(this);
		}
	}
